--- a/_data/news/2022.yml
+++ b/_data/news/2022.yml
@@ -1,8 +1,17 @@
 ---
 
-- type: reviewer
-  title: AISTATS 2022
-  date: 2022-11-16
-- type: reviewer
-  title: COMPSAC 2022
-  date: 2022-12-16
+- text: Successfully defended Ph.D. dissertation works, titled ["<u>Causal Inference in Healthcare&#58; Approaches to Causal Modeling and Reasoning through Graphical Causal Models</u>"](https://epublications.marquette.edu/cgi/viewcontent.cgi?article=2227&context=dissertations_mu).
+  date: 2022-03-04
+  new: true
+- text: Published conference paper as a co-author titled "<u>mTOCS&#58; Mobile Teleophthalmology in Community Settings to improve Eye-health in Diabetic Population</u>" in COMPSAC 2022.
+  date: 2022-04-08
+  new: true
+- text: Peer reviewer for "<u>COMPSAC 2022</u>".
+  date: 2022-03-25
+  new: true
+- text: Peer reviewer for "<u>ACM CHIL 2022</u>".
+  date: 2022-02-14
+  new: true
+- text: Peer reviewer for "<u>UAI 2022</u>".
+  date: 2022-04-11
+  new: true
