updated news of aaai 2023

--- a/_data/news/2022.yml
+++ b/_data/news/2022.yml
@@ -15,3 +15,6 @@
 - text: Peer reviewer for "<u>UAI 2022</u>".
   date: 2022-04-11
   new: true
+- text: Peer reviewer for "<u>AAAI 2023</u>".
+  date: 2022-09-06
+  new: true
