--- a/_data/news/2023.yml
+++ b/_data/news/2023.yml
@@ -2,4 +2,9 @@
 
 - text: Published journal paper as a corresponding author titled "<u>Structural causal model with expert augmented knowledge to estimate the effect of oxygen therapy on mortality in the icu</u>" in Artificial Intelligence in Medicine 2023 (IF:7.011).
   date: 2023-02-22
+- text: Peer reviewer for "<u>AISTATS 2024</u>".
+  date: 2023-08-20
+  new: true
+- text: Peer reviewer for "<u>AAAI 2024</u>".
+  date: 2023-08-22
   new: true
