added new links for github

--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,8 +1,10 @@
 github_users:
+  - adib2149
   - torvalds
   - alshedivat
 
 github_repos:
+  - adib2149/adib2149.github.io
   - alshedivat/al-folio
   - twbs/bootstrap
   - jekyll/jekyll
