--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,6 @@
 github_users:
   - adib2149
-  - torvalds
-  - alshedivat
 
 github_repos:
-  - adib2149/adib2149.github.io
-  - alshedivat/al-folio
-  - twbs/bootstrap
-  - jekyll/jekyll
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - jpswalsh/academicons
-  - mathjax/MathJax
+  - adib2149/BottomNavBar
+  - adib2149/FormMaster
