--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ og_image: adib-pic.jpg # The site-wide (default for all links) Open Graph previe
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: adib2149 # your GitHub user name
+github_username: riddhimanadib # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
