--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,6 +1,6 @@
 github_users:
-  - adib2149
+  - riddhimanadib
 
 github_repos:
-  - adib2149/BottomNavBar
-  - adib2149/FormMaster
+  - riddhimanadib/BottomNavBar
+  - riddhimanadib/FormMaster
